# hash

./: MANIFEST.in  README.md  pyproject.toml
hashcli/: __init__.py  command_proxy.py  config.py  history.py  llm_handler.py  main.py  tldr.py  ui.py
hashcli/commands/: __init__.py  _tldr.py  clear.py  config.py  fix.py  help.py  ls.py  model.py  tldr.py
hashcli/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
hashcli/shell/: README.md  setup_shell_integration.sh  test_installation.sh
hashcli/shell/bash/: hash.bash  hash_completion.bash  install.sh  test.sh
hashcli/shell/fish/: completions.fish  hash.fish
hashcli/shell/powershell/: completions.ps1  hash.ps1
hashcli/shell/zsh/: _hash  hash.zsh  install.sh  test.sh
hashcli/tests/: test_command_proxy.py  test_config.py  test_integration.py  test_main.py
hashcli/tools/: __init__.py  base.py  code_analysis.py  filesystem.py  shell.py  web_search.py
plugins/: hello.py  model.py  tldr.py
shell/: README.md
shell/fish/: hash.fish  install.sh  test.sh
shell/powershell/: completions.ps1  hash.ps1  install.ps1  uninstall.ps1
shell/zsh/: hash.zsh  test.sh
tests/: __init__.py  conftest.py  test_command_proxy.py  test_config.py  test_google_provider.py  test_history.py  test_integration.py  test_main.py  test_openai_provider.py
